LU-7796 lctl: set_param should report errors for wrong formats

"lctl set_param" should report errors for the following wrong
parameter formats:
 - path
 - path=
 - mix of the above formats, e.g.
   "lctl set_param jobid_var= timeout=20 abde=efg debug"

Signed-off-by: Emoly Liu <emoly.liu@intel.com>
Change-Id: Ic7d75b38c26d2e36fd011c92737c8642a8d1612c